--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
     "main": "index.js",
     "author": "tomoyuki kobayashi <kobatommy@gmail.com>",
     "license": "MIT",
-    "scripts": {},
-    "dependencies": {},
-    "devDependencies": {}
+    "scripts": {
+        "start": "nodemon --ext ts,yaml,graphql --exec 'ts-node' src/server/index.ts"
+    },
+    "dependencies": {
+        "graphql-yoga": "^1.18.3",
+        "prisma": "^1.34.10"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4",
+        "ts-node": "^8.10.2",
+        "typescript": "^3.9.7"
+    }
 }
