--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "dependencies": {
         "graphql-yoga": "^1.18.3",
-        "prisma": "^1.34.10"
+        "prisma": "^1.34.10",
+        "prisma-binding": "^2.3.16"
     },
     "devDependencies": {
         "nodemon": "^2.0.4",
