--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
     "name": "cc-api-solo-project",
     "version": "0.0.1",
-    "main": "index.js",
     "author": "tomoyuki kobayashi <kobatommy@gmail.com>",
-    "license": "MIT",
     "scripts": {
-        "start": "nodemon --ext ts,yaml,graphql --exec 'ts-node' src/server/index.ts"
+        "start": "node dist/server",
+        "clean": "rm -rf dist",
+        "build": "npm -s run clean && npm -s run generate && tsc",
+        "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
+        "generate:prisma": "prisma generate",
+        "generate:nexus": "ts-node --transpile-only src/schema",
+        "postinstall": "npm -s run generate",
+        "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server"
     },
     "dependencies": {
+        "@nexus/schema": "0.14.0",
+        "@types/node-fetch": "2.5.7",
+        "apollo-server": "2.16.0",
+        "graphql": "15.3.0",
         "graphql-yoga": "^1.18.3",
-        "prisma": "^1.34.10",
-        "prisma-binding": "^2.3.16"
+        "nexus-plugin-prisma": "0.16.1",
+        "nexus-prisma": "^0.16.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4",
-        "ts-node": "^8.10.2",
-        "typescript": "^3.9.7"
+        "@types/node": "12.12.53",
+        "ts-node": "8.10.2",
+        "ts-node-dev": "1.0.0-pre.50",
+        "typescript": "3.9.6"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "semi": false,
+        "trailingComma": "all"
+    },
+    "engines": {
+        "node": ">=10.0.0"
     }
 }
