--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server",
     "seed": "ts-node src/seed/*.ts",
     "lint": "eslint --fix --ext .js .",
-    "test": "mocha test && yarn lint"
+    "test": "mocha --require @babel/register test && yarn lint"
   },
   "dependencies": {
     "@nexus/schema": "0.14.0",
@@ -29,10 +29,13 @@
     "nexus-prisma": "0.16.2"
   },
   "devDependencies": {
-    "@types/node": "12.12.53",
-    "ts-node": "8.10.2",
-    "ts-node-dev": "1.0.0-pre.50",
-    "typescript": "3.9.6",
+    "@babel/core": "^7.10.5",
+    "@babel/register": "^7.10.5",
+    "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.1.0",
@@ -43,7 +46,10 @@
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1"
+    "pretty-quick": "^1.11.1",
+    "ts-node": "8.10.2",
+    "ts-node-dev": "1.0.0-pre.50",
+    "typescript": "3.9.6"
   },
   "husky": {
     "hooks": {
