--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
   "scripts": {
     "start": "yarn start:server && yarn start:front",
     "start:server": "node dist/server",
-    "start:front": "node ./src/index.js",
+    "start:front": "node ./src/front/index.js",
     "clean": "rm -rf dist",
     "build": "npm -s run clean && npm -s run generate && tsc",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
     "postinstall": "npm -s run generate",
-    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server",
+    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/api/server",
     "seed": "ts-node src/seed/*.ts",
     "lint": "eslint --fix --ext .js .",
-    "test": "mocha --require @babel/register test && yarn lint"
+    "test": "mocha --require @babel/register test && yarn lint",
+    "frontbuild": "browserify src/front/public/js/draw.js -o src/front/public/js/bundle.js"
   },
   "dependencies": {
     "@nexus/schema": "0.14.0",
     "@prisma/client": "2.3.0",
     "@types/node-fetch": "2.5.7",
     "apollo-server": "2.16.0",
+    "bluebird": "~3.5.5",
     "express": "4.17.1",
     "graphql": "15.3.0",
     "graphql-yoga": "1.18.3",
@@ -36,6 +38,7 @@
     "@typescript-eslint/parser": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "browserify": "^16.5.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.1.0",
