--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start:front": "node ./src/front/index.js",
     "clean": "rm -rf dist",
     "build": "npm -s run clean && npm -s run generate && tsc",
+    "initdb": "prisma init database",
+    "introspectdb": "prisma introspect",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema",
